The bug hunt is over
All credits to Christian who figured this out.
This is like black magic to me...

--- a/net.dreiucker.DecDescLanguage.ToReference.ui/plugin.xml
+++ b/net.dreiucker.DecDescLanguage.ToReference.ui/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.xtext.extension_resourceServiceProvider">
       <resourceServiceProvider
-            class="net.dreiucker.decdesclanguage.toreference.ui.ExecutableExtensionFactory"
+            class="net.dreiucker.decdesclanguage.toreference.ui.ExecutableExtensionFactory:org.eclipse.xtext.ui.resource.generic.EmfResourceUIServiceProvider"
             uriExtension="toreference">
       </resourceServiceProvider>
    </extension>
