Fixed issue where build participant was not registered correctly
This issue led to participating in the DDL build and thus not
considering new ddl elements correctly

--- a/net.dreiucker.DecDescLanguage.javadoc/plugin.xml
+++ b/net.dreiucker.DecDescLanguage.javadoc/plugin.xml
@@ -10,7 +10,8 @@
    <extension
          point="org.eclipse.xtext.builder.participant">
       <participant
-            class="net.dreiucker.decdesclanguage.javadoc.DdlElementProvider">
+            class="net.dreiucker.decdesclanguage.javadoc.DdlElementProvider"
+            fileExtensions="ddl">
       </participant>
    </extension>
 
