--- a/net.dreiucker.DecDescLanguage.javadoc/plugin.xml
+++ b/net.dreiucker.DecDescLanguage.javadoc/plugin.xml
@@ -4,13 +4,13 @@
    <extension
          point="net.dreiucker.javadocextender.elementprovider">
       <client
-            providerclass="net.dreiucker.decdesclanguage.javadoc.DdlElementProvider">
+            providerclass="net.dreiucker.decdesclanguage.javadoc.DdlElementProviderInterface">
       </client>
    </extension>
    <extension
          point="org.eclipse.xtext.builder.participant">
       <participant
-            class="net.dreiucker.decdesclanguage.javadoc.DdlElementProvider"
+            class="net.dreiucker.decdesclanguage.javadoc.DdlElementProviderInterface"
             fileExtensions="ddl">
       </participant>
    </extension>
